package com.pages;

import org.openqa.selenium.remote.RemoteWebDriver;

public class forgetPassWordPage extends Login {
    public forgetPassWordPage() {

    }
}
