@startuml

title __STUCTURINGTASK's Class Diagram__\n

  namespace com.pages {
    class com.pages.DashboardPage {
    }
  }
  

  namespace com.pages {
    class com.pages.Login {
    }
  }
  

  namespace com.pages {
    class com.pages.Verify {
    }
  }
  

  namespace com.pages {
    class com.pages.VerifyDashBoard {
    }
  }
  

  namespace com.pages {
    class com.pages.forgetPassWordPage {
    }
  }
  

  namespace com.seleniumBase {
    class com.seleniumBase.MyBrowser {
    }
  }
  

  com.pages.DashboardPage -up-|> com.pages.Login
  com.pages.Login -up-|> com.seleniumBase.MyBrowser
  com.pages.Verify -up-|> com.seleniumBase.MyBrowser
  com.pages.VerifyDashBoard -up-|> com.pages.Login
  com.pages.forgetPassWordPage -up-|> com.pages.Login


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
